# simpler-vulkan

./: .clang-format  .clang-tidy  .cursorignore  .gitignore  .gitmodules  CMakeLists.txt  CMakeProject7.cpp  CMakeUserPresets.json  GETTING_STARTED_HEX_RENDERER.md  vcpkg.json
design/: GLYPH_ATLAS_GUIDE.md  HEX_RENDERER_FOUNDATION.md  RENDERING_SETUP.md  TerrainPBRFields.md  art-style.md  combat.md  controls.md
shaders/: compile_shaders.bat  ssao.frag  ssao.frag.spv  ssao.vert  terrain.frag  terrain.frag.spv  terrain.vert  terrain.vert.spv  terrain_cull.comp  terrain_cull.comp.spv  terrain_depth.frag  text.frag  text.frag.spv  text.vert  text.vert.spv  tiltshift.frag  tiltshift.frag.spv  tiltshift.vert  tiltshift.vert.spv  tree.frag  tree.frag.spv  tree.vert  tree.vert.spv
src/: buffer.cpp  buffer.hpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  device.cpp  device.hpp  frame_pass_builder.cpp  frame_pass_builder.hpp  glyph_atlas.cpp  glyph_atlas.hpp  hex_coord.hpp  hex_engine.hpp  hex_mesh.hpp  image.cpp  image.hpp  main.cpp  map_builder.cpp  map_builder.hpp  noise.hpp  pch.hpp  render_graph.cpp  render_graph.hpp  ssao_pipeline.cpp  ssao_pipeline.hpp  swapchain.cpp  swapchain.hpp  terrain.hpp  terrain_application.cpp  terrain_application.hpp  terrain_example.hpp  terrain_pipeline.cpp  terrain_pipeline.hpp  terrain_renderer.cpp  terrain_renderer.hpp  text.hpp  text_pipeline.cpp  text_pipeline.hpp  text_renderer.cpp  text_renderer.hpp  (+17 more)
src/firmament/: buffer.cpp  buffer.hpp  device.cpp  device.hpp  glyph_atlas.cpp  glyph_atlas.hpp  hex_coord.hpp  image.cpp  image.hpp  pch.hpp  render_graph.cpp  render_graph.hpp  swapchain.cpp  swapchain.hpp  text.hpp  text_pipeline.cpp  text_pipeline.hpp  window.cpp  window.hpp
